Not getting data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,12 @@ dependencies:
     sdk: flutter
   hive_flutter: 
   provider: 
-  get_it:   
+  get_it: 
+  share_plus:
+  path_provider:
+  image_picker: 
+  permission_handler:
+  shared_preferences:    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
